[tool.poetry]
name = "hrflow-connectors"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
pydantic = "1.7.4"
hrflow = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyter = "^1.0.0"
pytest-cov = "^3.0.0"
black = "20.8b0"
unittest = "^0.0"
responses = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
