[tool.poetry]
name = "hrflow-connectors"
version = "2.0.0"
description = "hrflow-connectors is an open-source project created by HrFlow.ai to democratize Talent Data integration within the HR Tech landscape."
authors = ["Your Name <you@example.com>"]
license = "Apache Version 2.0"

[tool.poetry.dependencies]
python = "^3.6.3"
pydantic = "^1.9.0"
Jinja2 = "^3.0.3"
hrflow = "^1.9.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-black = "^0.2.4"
flake8-import-order = "^0.18.1"
ipython = "^7.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
